--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
 
 <head>
-    <title>Sample</title>
+    <title>THE WEEKND</title>
+    <link rel="icon" href="./images/favicon.ico">
     <link rel="stylesheet" href="./style.css">
-
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
